Assert triggers with -XX:+StressReflectiveCode

XMLWordPrintable

    • b08

        # Internal Error (/oracle/jdk_jdk/open/src/hotspot/share/opto/arraycopynode.cpp:139), pid=14939, tid=14950
        # assert((get_length_if_constant(phase) == -1) == !ary_src->size()->is_con() || phase->is_IterGVN()) failed: inconsistent

        Current CompileTask:
        C2: 3354 1355 b 4 java.lang.invoke.VarHandle$AccessType::values (10 bytes)

        Stack: [0x00007fb77ae24000,0x00007fb77af25000], sp=0x00007fb77af21120, free space=1012k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x629feb] ArrayCopyNode::get_count(PhaseGVN*) const+0x36b
        V [libjvm.so+0x630db8] ArrayCopyNode::Ideal(PhaseGVN*, bool)+0x828
        V [libjvm.so+0x1581818] PhaseGVN::transform_no_reclaim(Node*)+0x68
        V [libjvm.so+0x69d459] BarrierSetC2::clone(GraphKit*, Node*, Node*, Node*, bool) const+0x3d9
        V [libjvm.so+0x882b66] CardTableBarrierSetC2::clone(GraphKit*, Node*, Node*, Node*, bool) const+0x26
        V [libjvm.so+0x11f9f41] LibraryCallKit::copy_to_clone(Node*, Node*, Node*, bool)+0x171
        V [libjvm.so+0x11fa73a] LibraryCallKit::inline_native_clone(bool)+0x6ca
        V [libjvm.so+0x1208c2c] LibraryIntrinsic::generate(JVMState*)+0x2ec
        V [libjvm.so+0xbe0376] Parse::do_call()+0x4d6
        V [libjvm.so+0x153ffe8] Parse::do_one_bytecode()+0x1c18
        V [libjvm.so+0x1530a68] Parse::do_one_block()+0x3a8
        V [libjvm.so+0x1531480] Parse::do_all_blocks()+0x50
        V [libjvm.so+0x15348a8] Parse::Parse(JVMState*, ciMethod*, float)+0xc98
        V [libjvm.so+0x854a08] ParseGenerator::generate(JVMState*)+0x1a8
        V [libjvm.so+0xa21161] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xf51
        V [libjvm.so+0x853422] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2f2
        V [libjvm.so+0xa2ded8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x448
        V [libjvm.so+0xa2ecaf] CompileBroker::compiler_thread_loop()+0x36f
        V [libjvm.so+0x18ddd7a] JavaThread::thread_main_inner()+0x1da
        V [libjvm.so+0x18e2fcb] Thread::call_run()+0xfb
        V [libjvm.so+0x14ddf91] thread_native_entry(Thread*)+0x121

              Assignee:
              Christian Hagedorn
              Reporter:
              Tobias Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: