8223769: Assert triggers with -XX:+StressReflectiveCode

Fixed too strong assert.

Reviewed-by: kvn, thartmann